fix element alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,10 @@ body {
     margin: 0;
     background: #212121;
 }
+
+#background-canvas {
+    position: fixed;
+    touch-action: none;
+    top: 0;
+    left: 0;
+}
